[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/cover2.png" type="Texture" id=1]
[ext_resource path="res://UI/PauseScreen.gd" type="Script" id=2]
[ext_resource path="res://UI/Button.tscn" type="PackedScene" id=3]

[node name="PauseScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 184.0
color = Color( 0.0431373, 0.0352941, 0.117647, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 300.0
margin_bottom = 160.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 86.0
margin_top = 4.0
margin_right = 194.0
margin_bottom = 136.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 108.0
margin_bottom = 80.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 14.0
margin_right = 94.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="Resume" parent="MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 84.0
margin_right = 108.0
margin_bottom = 106.0
text = "Resume"

[node name="Quit" parent="MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 3.0
margin_top = 110.0
margin_right = 103.0
margin_bottom = 132.0
text = "Quit"

[node name="Button" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
visible = false
margin_top = 102.0
margin_right = 210.0
margin_bottom = 122.0
text = "Resume"

[node name="Button2" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
visible = false
margin_top = 136.0
margin_right = 210.0
margin_bottom = 156.0
text = "Quit"

[node name="Button4" parent="MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
visible = false
margin_top = 116.0
margin_bottom = 146.0
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]

[editable path="MarginContainer/CenterContainer/VBoxContainer/Resume"]

[editable path="MarginContainer/CenterContainer/VBoxContainer/Quit"]
